style.css
/* ... */
.newsContainer{
	margin-bottom: 100px;
}
.homeContainer{
	margin-top: 300px;
}
.indexBlock{
	margin-bottom: 90px;
	position: absolute;
	top: 0;
}
.indexContainer{
	margin-top: 60px;
	margin-left:100px;
	padding-bottom: 100px;
}
.indexProjectBox{
	width:18%;
	height:20%;
	margin: 5px 0px 5px 10px; 
	float: left;
	font-size:0.85em;
}
.indexProjectBox img{
width:130px;
height:130px;
}
.indexProjectBoxImgHolder {
height:130px;
width:130px;
background-size:130px 130px;
background-repeat:no-repeat;
}
.indexSortMenu{
	float: left;
	width: 50px;
	height: 100px;
	left: 10px;
	top: 100px;
	position: fixed;
	background-color: white;
	position: fixed;
	z-index: 5;
	font-size: 0.8em;
}
.indexSortMenu a{
	color:#000000;
	text-decoration:none;
}
.indexSortMenu a:hover{
	color:#7F7F7F;
	text-decoration:none;
}
.contactItem{
	width: 300px;
	margin-left: auto;
	margin-right: auto;
	margin-top: 55px;
	margin-bottom: 100px;
}
	.contactItem a {
		color:#000000;
		text-decoration:underline;
	}
	.contactItem a:hover {
		color:#6D6D62;
		text-decoration:none;
	}
	.contactItem img{ 
		max-width: 100%;
		width:100%;
		max-height: 100%;
		height: 100%;
		margin-bottom: 10px;
		margin-top: 10px;
		margin-left: auto;
		margin-right: auto;
		display: block;
		border:0;
	}

.hero-unit{
	width: 400px;
	margin-left: auto;
	margin-right: auto;
	padding-bottom: 50px;
}
	.hero-unit a{
		color: black;
	}
	.hero-unit img{
		margin-top: 20px;
		margin-bottom: 5px;
	}

.projects{
	width: 100%;
	margin-left: auto;
	margin-right: auto
}

.page{
	height: 1080px;
}

.postDate{
	font-weight:bold;
}

.project{
	width: 300px;
	margin-left: auto;
	margin-right: auto;
	margin-top: 40px;
}

.projectH{
	height: 400px;
	margin-top: auto;
	margin-bottom: auto;
}
	.projectH img{ 
		width: 400px;
		height: 325px;	
	 }

ul.images {
	margin: 0;
	padding: 0;
	height: 100%;
	white-space: nowrap;
	overflow-x: auto;
	width: 100%;
	padding-top: auto;
	padding-bottom: auto;
	overflow-y: none;
	position: relative;
}
	ul.images li{
		display: inline;
		margin-right: 150px;
		margin-left: 150px;
		margin-top: auto;
		margin-bottom: auto;
	}	 

.projectImage{
  height: 600px;
  width: 600px;
}

.imageHolder{
	height: 100%;
	margin-bottom: auto;
	margin-top: auto;
}

.roll{
	position: relative;
	padding: 0;
	margin: 0;
}

.roll .rollover, .roll:hover .regular {
	display: none;
	margin: 0;
	padding: 0;
}

.roll:hover .rollover {
	position: relative;
	display: inline;
}

.projectTitle{
	text-transform: capitalize;
	width: 100%;
	margin-left: auto;
	margin-right: auto
}

#lightbox {
    position:fixed; /* keeps the lightbox window in the current viewport */
    top:0;
    left:0;
    width:100%;
    height:100%;
   	/* background:url(overlay.png) repeat; */
 	background:#ffffff;
    text-align:center;
	z-index:4;
 	display:none;
	
}
  
#lightbox img {
	/* JB */
    /*box-shadow:0 0 25px #111;
    -webkit-box-shadow:0 0 25px #111;
    -moz-box-shadow:0 0 25px #111;*/
	max-width:95%;
	/* max-height: auto; */
}

/*Scroll enhancements*/
::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}

/* Track */
::-webkit-scrollbar-track {
    border-radius: 5px;
    visibility: hidden;
    background: lightgray; 
}

/* Handle */
::-webkit-scrollbar-thumb {
    -webkit-border-radius: 5px;
    border-radius: 5px;
    background: gray; 
    -webkit-box-shadow: inset 0 0 4px rgba(0,0,0,0.5); 
}

/* Inactive */
::-webkit-scrollbar-thumb:window-inactive {
	background: rgba(0,0,0,0.5); 
}

/* Corner */
::=webkit-scrollbar-corner{
	height: 50px;
}

/* Some extra special project stuff */
@import url(http://fonts.googleapis.com/css?family=Josefin+Sans+Std+Light);
body{height:100%;}
*{outline:none;}	
.bodynew{margin:0px; padding:0px; background:#000;}
#toolbar{position:fixed; z-index:3; right:10px; top:10px; padding:5px; background:url(fs_img_g_bg.png);}
#toolbar img{border:none;}
#img_title{position:fixed; z-index:3; left:10px; top:10px; padding:10px; background:url(fs_img_g_bg.png); color:#FFF; font-family:'Josefin Sans Std Light', arial, serif; font-size:24px; text-transform:uppercase;}
#bg{position:fixed; z-index:1; overflow:hidden; width:100%; height:100%;}
#bgimg{display:none; -ms-interpolation-mode: bicubic;}
#preloader{position:relative; z-index:3; width:32px; padding:20px; top:80px; margin:auto; background:#000;}
#thumbnails_wrapper{z-index:2; position:fixed; bottom:0; width:100%; background:url(empty.gif); /* stupid ie needs a background value to understand hover area */}
#outer_container{position:relative; padding:0; width:100%; margin:40px auto;}
#outer_container .thumbScroller{position:relative; overflow:hidden; background:url(fs_img_g_bg.png);}
#outer_container .thumbScroller, #outer_container .thumbScroller .container, #outer_container .thumbScroller .content{height:170px;}
#outer_container .thumbScroller .container{position:relative; left:0;}
#outer_container .thumbScroller .content{float:left;}
#outer_container .thumbScroller .content div{margin:5px; height:100%;}
#outer_container .thumbScroller img{border:5px solid #fff;}
#outer_container .thumbScroller .content div a{display:block; padding:5px;}

.nextImageBtn, .prevImageBtn{display:block; position:absolute; width:50px; height:50px; top:50%; margin:-25px 10px 0 10px; z-index:3; filter:alpha(opacity=40); -moz-opacity:0.4; -khtml-opacity:0.4; opacity:0.4;}
.nextImageBtn:hover,.prevImageBtn:hover{filter:alpha(opacity=80); -moz-opacity:0.8; -khtml-opacity:0.8; opacity:0.8;}
.nextImageBtn{right:0; background:#000 url(nextImgBtn.png) center center no-repeat;}
.prevImageBtn{background:#000 url(prevImgBtn.png) center center no-repeat;}

.leftArrow{
	float: left;
	width: 50px;
	height: 100%;
	left: 0;
	position: fixed;
	padding-top: auto;
	bottom: 15px;
	background: url('ArrowLeft.png') center center no-repeat;
	background-color: white;
	display: none;
	position: fixed;
	z-index: 2;
	opacity:1.0;
	filter:alpha(opacity=100); /* For IE8 and earlier */
}
/* ... */

